# ibp

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-template  README.md
src/: CMakeLists.txt
src/ibp/imagebatchprocessor/: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow.main.cpp  mainwindow.toolbar.batch.cpp  mainwindow.toolbar.edit.cpp  mainwindow.ui  mainwindow.view.batch.cpp  mainwindow.view.edit.cpp
src/ibp/imgproc/: CMakeLists.txt  colorconversion.cpp  colorconversion.h  freeimage.cpp  freeimage.h  imagefilter.h  imagefilterlist.cpp  imagefilterlist.h  imagehistogram.cpp  imagehistogram.h  intensitymapping.cpp  intensitymapping.h  lut.h  lut01.cpp  lut02.cpp  lut03.cpp  pixelblending.cpp  pixelblending.h  thresholding.cpp  thresholding.h  types.h  util.cpp  util.h
src/ibp/misc/: CMakeLists.txt  basesplineinterpolator1D.cpp  basesplineinterpolator1D.h  configurationmanager.cpp  configurationmanager.h  cubicsplineinterpolator1D.cpp  cubicsplineinterpolator1D.h  interpolator1D.cpp  interpolator1D.h  linearsplineinterpolator1D.cpp  linearsplineinterpolator1D.h  nativeeventfilter.cpp  nativeeventfilter.h  nearestneighborsplineinterpolator1D.cpp  nearestneighborsplineinterpolator1D.h  probabilitymassfunction.cpp  probabilitymassfunction.h  util.h
src/ibp/plugins/: CMakeLists.txt  imagefilterpluginloader.cpp  imagefilterpluginloader.h
src/ibp/widgets/: CMakeLists.txt  affinetransformationlist.cpp  affinetransformationlist.h  affinetransformationlist.ui  anchorpositionbox.cpp  anchorpositionbox.h  colorbox.cpp  colorbox.h  colorbutton.cpp  colorbutton.h  colorcompositionmodecombobox.cpp  colorcompositionmodecombobox.h  colorpicker.cpp  colorpicker.h  colorpicker.ui  colorslider.cpp  colorslider.h  curves.cpp  curves.h  filedialog.cpp  filedialog.h  genericdialog.cpp  genericdialog.h  genericdialog.ui  histogramviewer.cpp  histogramviewer.h  hslcolorreplacementcurvespaintdelegate.cpp  hslcolorreplacementcurvespaintdelegate.h  hslkeyingcurvespaintdelegate.cpp  hslkeyingcurvespaintdelegate.h  imagebutton.cpp  imagebutton.h  imageviewer.cpp  imageviewer.h  inputlevelsslider.cpp  inputlevelsslider.h  inputlevelswidget.cpp  inputlevelswidget.h  inputlevelswidget.ui  levelscurvespaintdelegate.cpp  (+18 more)
src/plugins/: CMakeLists.txt  imagefilterpluginloader.cpp  imagefilterpluginloader.h
src/plugins/imagefilter_adaptivemanifoldfilter/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.h  main.cpp
src/plugins/imagefilter_addnoise/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  main.cpp
src/plugins/imagefilter_autolevels/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  main.cpp
src/plugins/imagefilter_autothreshold/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  main.cpp
src/plugins/imagefilter_autotrim/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  main.cpp
src/plugins/imagefilter_basicrotation/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  main.cpp
src/plugins/imagefilter_bilateralfilter/: CMakeLists.txt  filter.cpp  filterwidget.cpp  main.cpp
src/plugins/imagefilter_boxblur/: CMakeLists.txt  filter.cpp  filterwidget.cpp  main.cpp
src/plugins/imagefilter_brightnesscontrast/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  main.cpp
src/plugins/imagefilter_colorbalance/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  main.cpp
src/plugins/imagefilter_colorboosting/: CMakeLists.txt  filter.cpp  main.cpp
src/plugins/imagefilter_colorlayer/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  main.cpp
src/plugins/imagefilter_contrastpreservinggrayscale/: CMakeLists.txt  filter.cpp  main.cpp
src/plugins/imagefilter_curves/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  main.cpp
src/plugins/imagefilter_dctdenoising/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.h  filterwidget.ui  main.cpp
src/plugins/imagefilter_desaturate/: CMakeLists.txt  filter.cpp  filter.h  main.cpp
src/plugins/imagefilter_domaintransformfilter/: CMakeLists.txt  filter.cpp  filterwidget.ui  main.cpp
src/plugins/imagefilter_equalize/: CMakeLists.txt  filter.cpp  filter.h  main.cpp
src/plugins/imagefilter_flip/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  main.cpp
src/plugins/imagefilter_gaussianblur/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  main.cpp
src/plugins/imagefilter_grayscale/: CMakeLists.txt  filter.cpp  main.cpp
src/plugins/imagefilter_guidedfilter/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  main.cpp
src/plugins/imagefilter_hslcolorreplacement/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  main.cpp
src/plugins/imagefilter_hslkeyer/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  main.cpp
src/plugins/imagefilter_huesaturation/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  main.cpp
src/plugins/imagefilter_identity/: CMakeLists.txt  filter.cpp  main.cpp
src/plugins/imagefilter_inpaintingiihc/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  main.cpp
src/plugins/imagefilter_invert/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  main.cpp
src/plugins/imagefilter_itkn4iihc/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  main.cpp  readme.md
src/plugins/imagefilter_levels/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  main.cpp
src/plugins/imagefilter_lowpassiihc/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  main.cpp
src/plugins/imagefilter_lumakeyer/: CMakeLists.txt  filter.cpp  filter.h  filterwidget.cpp  filterwidget.h  filterwidget.ui  main.cpp
(+512 files in other folders)
