option(IBP_BUILD_PLUGINS "Build the plugins" OFF)

if(IBP_BUILD_PLUGINS)
    set(
        IBP_PLUGINS_OUTPUT_DIRECTORY
        "${IBP_OUTPUT_DIRECTORY}/plugins"
    )

    add_subdirectory(imagefilter_adaptivemanifoldfilter)
    add_subdirectory(imagefilter_addnoise)
    add_subdirectory(imagefilter_autolevels)
    add_subdirectory(imagefilter_autothreshold)
    add_subdirectory(imagefilter_autotrim)
    add_subdirectory(imagefilter_basicrotation)
    add_subdirectory(imagefilter_bilateralfilter)
    add_subdirectory(imagefilter_boxblur)
    add_subdirectory(imagefilter_brightnesscontrast)
    add_subdirectory(imagefilter_colorbalance)
    add_subdirectory(imagefilter_colorboosting)
    add_subdirectory(imagefilter_colorlayer)
    add_subdirectory(imagefilter_contrastpreservinggrayscale)
    add_subdirectory(imagefilter_curves)
    add_subdirectory(imagefilter_dctdenoising)
    add_subdirectory(imagefilter_desaturate)
    add_subdirectory(imagefilter_domaintransformfilter)
    add_subdirectory(imagefilter_equalize)
    add_subdirectory(imagefilter_flip)
    add_subdirectory(imagefilter_gaussianblur)
    add_subdirectory(imagefilter_grayscale)
    add_subdirectory(imagefilter_guidedfilter)
    add_subdirectory(imagefilter_hslcolorreplacement)
    add_subdirectory(imagefilter_hslkeyer)
    add_subdirectory(imagefilter_huesaturation)
    add_subdirectory(imagefilter_identity)
    add_subdirectory(imagefilter_inpaintingiihc)
    add_subdirectory(imagefilter_invert)
    add_subdirectory(imagefilter_itkn4iihc)
    add_subdirectory(imagefilter_levels)
    add_subdirectory(imagefilter_lowpassiihc)
    add_subdirectory(imagefilter_lumakeyer)
    add_subdirectory(imagefilter_median)
    add_subdirectory(imagefilter_morphologicaliihc)
    add_subdirectory(imagefilter_morphology)
    add_subdirectory(imagefilter_nlmdenoising)
    add_subdirectory(imagefilter_prospectiveiihc)
    add_subdirectory(imagefilter_resample)
    add_subdirectory(imagefilter_resize)
    add_subdirectory(imagefilter_surfacefittingiihc)
    add_subdirectory(imagefilter_texturelayer)
    add_subdirectory(imagefilter_threshold)
    add_subdirectory(imagefilter_tvdenoising)
    add_subdirectory(imagefilter_tviihc)
    add_subdirectory(imagefilter_unsharpmask)
endif()